--- a/DaSpeakable Me/DaSpeakable Me/View/ResultView/ResultTableViewCell/ResultTableViewCell.xib
+++ b/DaSpeakable Me/DaSpeakable Me/View/ResultView/ResultTableViewCell/ResultTableViewCell.xib
@@ -10,38 +10,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultCell" rowHeight="164" id="KGk-i7-Jjw" customClass="ResultTableViewCell" customModule="DaSpeakable_Me" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="370" height="164"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="resultCell" rowHeight="188" id="KGk-i7-Jjw" customClass="ResultTableViewCell" customModule="DaSpeakable_Me" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="418" height="188"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="370" height="164"/>
+                <rect key="frame" x="0.0" y="0.0" width="418" height="188"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1si-Dd-bYC">
-                        <rect key="frame" x="20" y="40" width="330" height="119"/>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1si-Dd-bYC">
+                        <rect key="frame" x="20" y="40" width="339" height="95"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5i-qB-BPp">
-                                <rect key="frame" x="94" y="51" width="67" height="32"/>
+                                <rect key="frame" x="94" y="44" width="186" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fillerImg" translatesAutoresizingMaskIntoConstraints="NO" id="9EO-Im-0u6">
-                                <rect key="frame" x="-13" y="-39" width="125" height="87"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-wL-0sH">
-                                <rect key="frame" x="275" y="47" width="38" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system" title="">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" weight="bold"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylt-2F-SsS">
-                                <rect key="frame" x="94" y="22" width="42" height="21"/>
+                                <rect key="frame" x="94" y="22" width="186" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,28 +38,24 @@
                         </subviews>
                         <color key="backgroundColor" name="Navy"/>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fillerImg" translatesAutoresizingMaskIntoConstraints="NO" id="9EO-Im-0u6">
+                        <rect key="frame" x="0.0" y="0.0" width="125" height="87"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="1si-Dd-bYC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Ubg-pU-SiK"/>
-                    <constraint firstAttribute="trailing" secondItem="1si-Dd-bYC" secondAttribute="trailing" constant="20" id="deS-iM-Kz5"/>
-                    <constraint firstItem="1si-Dd-bYC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="e2W-og-KQu"/>
-                    <constraint firstAttribute="bottom" secondItem="1si-Dd-bYC" secondAttribute="bottom" constant="5" id="jS2-eH-L9t"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="speakAvatarImage" destination="9EO-Im-0u6" id="hIR-Ub-PPK"/>
-                <outlet property="speakComponentDetailButton" destination="LQy-wL-0sH" id="zKw-iD-xGu"/>
                 <outlet property="speakComponentLabel" destination="ylt-2F-SsS" id="uJc-xV-JH5"/>
                 <outlet property="speakScoreComponentLabel" destination="W5i-qB-BPp" id="v5k-3H-itH"/>
                 <outlet property="speakViewContainer" destination="1si-Dd-bYC" id="x0v-0c-Zjl"/>
             </connections>
-            <point key="canvasLocation" x="163.768115942029" y="89.732142857142847"/>
+            <point key="canvasLocation" x="198.55072463768118" y="97.767857142857139"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chevron.right" catalog="system" width="96" height="128"/>
-        <image name="fillerImg" width="89" height="107"/>
+        <image name="fillerImg" width="232" height="285"/>
         <namedColor name="Navy">
             <color red="0.14117647058823529" green="0.18431372549019609" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
